# wlwindow

./: .gitignore  meson.build
include/: error.hpp  window.hpp  wlw.hpp
src/: error.cpp  window.cpp  wlw.cpp
